backend ready for render

--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,9 @@
     "main": "dist/index.js",
     "scripts": {
         "dev": "tsx watch src/index.ts",
-        "build": "tsc",
-        "start": "node dist/index.js",
+        "build": "prisma generate && tsc",
+        "start": "prisma db push && node dist/index.js",
+        "postinstall": "prisma generate",
         "db:generate": "prisma generate",
         "db:push": "prisma db push",
         "db:migrate": "prisma migrate dev",
@@ -19,15 +20,15 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.2",
-        "zod": "^3.25.76"
-    },
-    "devDependencies": {
+        "prisma": "^5.22.0",
+        "@types/node": "^22.19.11",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
-        "@types/node": "^22.16.5",
-        "prisma": "^5.22.0",
-        "tsx": "^4.19.2",
-        "typescript": "^5.9.3"
+        "typescript": "^5.6.3",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "tsx": "^4.19.2"
     },
     "engines": {
         "node": ">=18.0.0"
