--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,7 +7,7 @@
             "ES2022"
         ],
         "outDir": "./dist",
-        "rootDir": ".",
+        "rootDir": "./src",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
@@ -28,12 +28,12 @@
         }
     },
     "include": [
-        "src/**/*",
-        "prisma/**/*",
-        "package.json"
+        "src/**/*"
     ],
     "exclude": [
         "node_modules",
-        "dist"
+        "dist",
+        "prisma/seed.ts",
+        "clear-cache.ts"
     ]
 }
