--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,11 @@
     "type": "module",
     "main": "dist/index.js",
     "scripts": {
-        "dev": "tsx watch src/index.ts",
-        "build": "prisma generate && tsc",
-        "start": "prisma db push && node dist/index.js",
-        "postinstall": "prisma generate",
-        "db:generate": "prisma generate",
-        "db:push": "prisma db push",
-        "db:migrate": "prisma migrate dev",
-        "db:seed": "tsx prisma/seed.ts",
-        "db:studio": "prisma studio"
+    "dev": "tsx watch src/index.ts",
+      "build": "prisma generate && tsc",
+      "start": "node dist/index.js",
+      "postinstall": "prisma generate",
+      "db:push": "prisma db push"
     },
     "dependencies": {
         "@prisma/client": "^5.22.0",
