--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,11 @@
     "type": "module",
     "main": "dist/index.js",
     "scripts": {
-    "dev": "tsx watch src/index.ts",
-      "build": "prisma generate && tsc",
-      "start": "node dist/index.js",
-      "postinstall": "prisma generate",
-      "db:push": "prisma db push"
+        "dev": "tsx watch src/index.ts",
+        "build": "prisma generate && tsc",
+        "start": "node dist/index.js",
+        "postinstall": "prisma generate",
+        "db:push": "prisma db push"
     },
     "dependencies": {
         "@prisma/client": "^5.22.0",
@@ -28,5 +28,8 @@
     },
     "engines": {
         "node": ">=18.0.0"
+    },
+    "prisma": {
+        "seed": "tsx prisma/seed.ts"
     }
 }
